--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,23 @@
+body {
+    margin: 0;
+    overflow: hidden;
+    background-color: #282c34;
+    font-family: Arial, sans-serif;
+    color: white;
+    text-align: center;
+}
 
+#gameCanvas {
+    display: block;
+    background-color: #000;
+    width: 100vw;
+    height: 100vh;
+}
+
+#score, #lives {
+    position: absolute;
+    top: 10px;
+    font-size: 24px;
+    font-weight: bold;
+    z-index: 10;
+}
