--- a/css/style.css
+++ b/css/style.css
@@ -53,3 +53,9 @@ button {
     transition: background-color 0.3s, color 0.3s, box-shadow 0.3s;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
+
+button:hover {
+    background-color: #ffffff;
+    color: #3b3b3b;
+    box-shadow: 0 0 15px rgba(255, 255, 255, 0.7);
+}
