--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
+/* stylelint-disable */
+@import url("styling.css");
+/* stylelint-enable */
 
 body {
     margin: 0;
     overflow: hidden;
     background: linear-gradient(135deg, #0f0f0f, #2c2c2c);
-    font-family: 'Montserrat', sans-serif;
+    font-family: Montserrat, sans-serif;
     color: #e0e0e0;
     text-align: center;
 }
@@ -15,7 +17,7 @@ body {
     width: 100vw;
     height: 100vh;
     border: none;
-    box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 0 15px rgba(0, 0, 0, 50%);
 }
 
 #score, #lives {
@@ -25,7 +27,7 @@ body {
     font-weight: 700;
     z-index: 10;
     color: #e0e0e0;
-    text-shadow: 0 0 5px rgba(0, 0, 0, 0.7);
+    text-shadow: 0 0 5px rgba(0, 0, 0, 70%);
 }
 
 #lives {
@@ -42,29 +44,29 @@ body {
     font-weight: 700;
     z-index: 20;
     display: none;
-    color: #ffffff;
-    text-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
-    background: rgba(50, 50, 50, 0.9);
+    color: #fff;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 70%);
+    background: rgba(50, 50, 50, 90%);
     padding: 30px;
     border-radius: 8px;
-    box-shadow: 0 0 15px rgba(0, 0, 0, 0.7);
+    box-shadow: 0 0 15px rgba(0, 0, 0, 70%);
 }
 
 button {
-    font-family: 'Montserrat', sans-serif;
+    font-family: Montserrat, sans-serif;
     font-size: 18px;
     padding: 12px 25px;
     margin-top: 20px;
     cursor: pointer;
-    border: 2px solid #ffffff;
+    border: 2px solid #fff;
     background-color: #3b3b3b;
-    color: #ffffff;
+    color: #fff;
     transition: background-color 0.3s, color 0.3s, box-shadow 0.3s;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 50%);
 }
 
 button:hover {
-    background-color: #ffffff;
+    background-color: #fff;
     color: #3b3b3b;
-    box-shadow: 0 0 15px rgba(255, 255, 255, 0.7);
+    box-shadow: 0 0 15px rgba(255, 255, 255, 70%);
 }
